Sat Nov 15 14:33:39 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:

          Replaced a generated 'extern' with 'TAO_NAMESPACE_STORAGE_CLASS'
          to automatically include the export macro, if any. Thanks to
          Mike Hupburn <mike@anvil.com> for rerorting the problem.

Fri Nov 14 15:04:53 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* examples/AMI/FL_Callback/peer.cpp:
          Added #include ace/OS_NS_errno.h

Fri Nov 14 04:53:28 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/RTScheduling/Scheduling_Interceptor/Makefile:
          Moved the testC.o and testS.o objects in from of the
          test_client.o and test_server.o objects in the CLIENT_OBJS and
          SERVER_OBJS lists to force them to get created first.

Fri Nov 14 03:47:33 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * orbsvcs/examples/RtEC/Kokyu/Makefile:
          Only define BIN target and build if RTKokyuEvent and CosNaming
          have been built.

        * orbsvcs/orbsvcs/Makefile.RTKokyuEvent:
          Added -*- Makefile -*- to top of file to highlight syntax.

Fri Nov 14 02:51:44 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/Logging/Logger_i.cpp:
          Added #include os_netdb.h.

Fri Nov 14 02:28:09 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tao/Messaging/Asynch_Invocation_Adapter.{h,cpp,inl}:
          Added new file, Asynch_Invocation_Adapter.inl, and added invoke
          method that matches the one in the base class that had been
          hidden by the new one with different parameters.

Thu Nov 13 21:02:31 2003  Carlos O'Ryan  <coryan@atdesk.com>

	* tao/Queued_Message.cpp:
	  Made the remove_from_list() operation safe if called multiple
	  times.  This fixes:
	    http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1614

Fri Nov 14 00:26:46 UTC 2003  Don Hinton  <dhinton@dresystems.com>
